tests/baselines/reference/classImplementsClass2.errors.txt
==== tests/cases/compiler/classImplementsClass2.ts (2 errors) ====
    class A { foo(): number { return 1; } }
    class C implements A {} // error
          ~
!!! classImplementsClass2.ts(2,7): error TS2137: Class C declares interface A but does not implement it:
!!! 	Type 'C' is missing property 'foo' from type 'A'.
    
    class C2 extends A {
        foo() {
            return 1;
        }
    }
    
    var c: C;
    var c2: C2;
    c = c2;
    c2 = c;
    ~~
!!! classImplementsClass2.ts(13,1): error TS2012: Cannot convert 'C' to 'C2':
!!! 	Type 'C' is missing property 'foo' from type 'C2'.